# flopster

./: .gitignore  CMakeLists.txt  README.md  TROUBLESHOOTING.md  build.bat  build.sh  install.bat  install.sh  package-lock.json  package.json  readme.txt
arduino/: floppy.ino
original/: app.icns  flopster.cpp  flopster.h  gui.cpp  gui.h  readme.txt  resource.h  resource.rc
samples/01 NEC FD1231H 2000-10/: readme.txt
samples/02 NEC FD1231H 2005-4/: readme.txt
samples/03 NEC FD1231H 2007-10/: readme.txt
samples/04 TEAC FD-235HF-A291/: readme.txt
samples/05 TEAC FD-235HF-C291/: readme.txt
samples/06 MITSUMI D359M3D/: readme.txt
samples/07 SAMSUNG SFD321B-E/: readme.txt
scripts/: dist.js  postinstall.js  run.js  set-version.js
scripts/installers/: mac-install.sh  win-install.bat
src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  version.h
tools/: linux-appimage.sh  linux-build.sh  linux-deb.sh  linux-install.sh  linux-run.sh  mac-build.sh  mac-dist-installer.sh  mac-install.sh  mac-pkg.sh  mac-run.sh  win-build.bat  win-build.ps1  win-dist-installer.bat  win-dist-installer.ps1  win-install.bat  win-install.ps1  win-msi.bat  win-msi.ps1  win-run.bat  win-run.ps1  win-set-icon.ps1  win-uninstall.bat  win-uninstall.ps1
